2003-08-14	Joel Sherrill <joel@OARcorp.com>

	PR 92/rtems
	* Makefile.am, src/alarm.c, src/psignal.c: Added ualarm() and usleep().
	* src/ualarm.c, src/usleep.c: New files.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged-in into ../configure.ac)
	* Makefile.am:
	Reflect having merged configure.ac into ../configure.ac.
	* src/config.h: New.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-27	Juan Zamorano <jzamora@fi.upm.es>

	* src/ptimer1.c: Correct problem which could lead to overflow in time
	math.

2003-01-03	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: Corrected entry for sysconf.c which did not include PR.

2003-01-03	Jay Monkman <jtm@smoothsmoothie.com>

	* src/mqueueopen.c: Actually open the message queue descriptor
	so it is available for others to use.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Don't create $ARCH as side-effect of compilation.

2002-12-11	Vladimir Nesic <vnesic@dkts.co.yu>

	* src/cancelrun.c, src/cleanuppop.c: Get the last real node not the
	permanent null last node.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Remove.
	* inline/Makefile.am: Remove.
	* macros/Makefile.am: Remove.
	* src/Makefile.am: Remove.
	* Makefile.am: Merge-in removed Makefile.ams.
	* configure.ac: Reflect changes above.

2002-12-06	Vladimir Nesic <vnesic@dkts.co.yu>

	* inline/rtems/posix/cond.inl, macros/rtems/posix/cond.inl:
	Implemented PTHREAD_COND_INITIALIZER support.  Vladimir implemented
	the inline version and Joel adapted it to the macro version.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/posix/timer.h, src/keygetspecific.c,
	src/posixtimespecsubtract.c, src/ptimer1.c, src/semunlink.c:
	Added casts to eliminate warnings on 16-bit targets like the h8300.
